Update 10 minute pitch.html

--- a/10 minute pitch.html
+++ b/10 minute pitch.html
@@ -7,46 +7,44 @@ Open mind and a new experience.
 Repeat every word that the speaker says.
 That's how you listen
 Don't forget you hated the speakers. Those fucking arrogant speakers.
-My name is David Patrone
-I want to thank _______________ for having me here tonight. I enjoy service and I enjoy speaking and I like wearing a suit and being the center of attention so I'm pretty much as happy as I can be right now...
-My alcoholism manifests in other areas of my life including drug addiction so please forgive me if I slip 
+My name is David Patrone, I have recovered from a hopeless state of mind, as a result of a lot of work, much of this work is clearly outlined in the first 167 pages of the book, "Alcoholics Anonymous"
+I want to thank _______________ for having me here tonight. I enjoy service and I enjoy speaking and I like that my experience can be an asset to myself and others by relating my experience honestly.
+My alcoholism manifests in other areas of my life including drug addiction so please forgive me if I mention something that disturbs you. 
 Alcohol has been involved in nearly all aspects of my life from a very young age.
-My sobriety Date is 12/13/14
-This is not my first sobriety date. I hope it is my last.
-I have a sponsor Craig R. who knows I am his sponsee<
-I have worked all 12 steps, in order, several times.
+I have had many sobriety dates and some long lengths of time abstinent from all intoxicants. This was essential for me to successfully complete this work.
+I have had several amazing sponsors; some of whom knew this, some of them did not. It works better when they know, in case you're wondering. Asking is one of the most difficult things I have ever had to do. Harder than asking anyone out; much harder than proposing to my wife; hell it was harder than asking if we should divorce. It is worth it.
+I have worked all 12 steps, in order, several times. There are many ways to do this, I recommend the BBA workshop for those of you who want to be very thorough. I did not do it that way until my third or fourth time through the steps but it was a significant awakening and I feel a responsibility to stress that this method achieved the greatest awakening from the 12 steps for me, second only to attending classes where I studied the Bhagavad Gita and Shrimad Bagavatam.
 As a result of this work I have learned how to seek the guidance of my higher power in all that I do. I am sometimes capable of this.
-As a result of this work, I haven't needed to take a drink or our a drug in my body in 13 months
-As a result of these steps I will tell you that I do believe that anything is possible if you leave the anything up to God.
-I can tell you that I think about using every day, sometimes all day; and, that this is not a reason to drink or use; but, I have used that as an excuse to relapse. Reasons and excuses are different to me.
-I have a home group, a couple of them actually.
-I usually go to several meetings every day.
+As a result of this work, I am recovered, even when I am not sober. I rarely mention that last part because I was clean and sober when I achieved these spiritual experiences and it is my recommendation that you do the same whether or not you think you have a problem.
+As a result of this work I will tell you that I do believe that anything is possible if you leave the anything up to your Higher Power.
+I can tell you that I think about using often, sometimes all day; and, that this is not a reason to drink or use; but, I have used that as an excuse to relapse. Reasons and excuses are different to me. That is one, small way of regaining power. This will not be sufficient if you are of the Alcoholic type.
+I had a home group, a couple of them actually.
+When doing this work and for many years, I uwould sually go to several meetings every day.
 It's important that you know that I don't speak for AA. I only share my "experience strength and hope" as they suggest in the "Big Book" "Alcoholics Anonymous.
- I would like to congratulate the token takers and the newcomers, whether you spoke up or not. This is a place where you will find answers to questions that most people never ask themselves.
+I would like to congratulate the token takers and the newcomers, whether you spoke up or not. This is a place where you will find answers to questions that most people never ask themselves.
 I recently heard someone share this to the newcomers in the rooms:
- Welcome to AA<
+"Welcome to AA
 The bad news is that these are the most expensive seats in the world
 The good news is that you've already paid for them.
-It's also important to note that you can stop paying for them any time you like, more suffering does not get you better seats in AA
-better seats might get you more suffering but I guess that depends on the speaker.
-it's important for me to be honest and so I'll mention that everything you are about to hear, I've heard from someone else first.
-I didn't make any of this stuff up, well except for that last part about suffering doesn't get you better seats...
-When I hear something that sounds true to me I write them down, I used to use my phone to take notes; but it created a distraction to me when people did that and so I stopped doing it and now people using their phones doesn't bother me at all.
-I'm an Agnostic, as were many of the original members of AA, which is why there is a chapter titled, "We Agnostics." That was important to me in the beginning because there was a lot of God talk in the rooms from a lot of people who seemed to me to have spent very little time considering the impact of that word on someone who has a "Spiritual Malady" which is one of the three characteristics which contribute to the condition of Alcoholism or Addiction.
+It's also important to note that you can stop paying for them any time you like, more suffering does not get you better seats in AA."
+I thought that was funny, tonight, better seats might get you more suffering; but, I'll try to keep the suffering bearable.
+it's important for me to be honest and so I'll mention that most of the things you are about to hear, I've heard from someone else first, especially the funny stuff. You have my permission to repeat anything I say here for the purposes of recovery.
+When I hear something that sounds true to me I write them down, I used to use my phone to take notes; but, it was definitely brought to my attention that this created a distraction to people around me. That pissed me off; as intolerance often does, and eventually I went back to writing in a book; and now, people using their phones doesn't bother me at all.
+I'm an Agnostic, as were many of the original members of AA, which is probably why Chapter 4 is titled, "We Agnostics." That was important to me in the beginning because there was a lot of God talk in the rooms from a lot of people who seemed to me to have spent very little time considering the impact of that word on someone who has a "Spiritual Malady" which is identified as one of the three characteristics which contribute to the condition of Alcoholism or Addiction.
 Agnostics get a bad rap; simply because most people have the wrong definition of Agnostic.
 Merriam Webster's Dictionary defines an Agnostic as:
 a person who holds the view that any ultimate reality is unknown and probably unknowable;
-probably unknowable, it seems that according to Merriam and Webster, agnostics are even agnostic about agnosticism.
-It is not a description but a philosophy. Agnostics believe that the existence of God is neither provable nor disprovable and unfathomable regardless due to the fact that you cannot possibly grasp something that is conceptually, infinite.
-So if you Identify with that, I want tell you, "Welcome,
+probably unknowable, it seems that according to Merriam and Webster, agnostics are even agnostic about agnosticism. Word.
+It is not a description that defines a philosophy. Agnostics believe that the existence of God is neither provable nor disprovable and unfathomable regardless due to the fact that you cannot possibly grasp something that is infinite; conceptually.
+So if you Identify with that, I want tell you, "Welcome."
 I have spent my life searching for existence of God and no one, not Priests, Ministers, Rabbis, Monks, Devotees, Philosophers, Mathemeticians, Physicists, Christians, Jews, Muslims, Hindus, Buddhists, Taoists or any other of the religions or philosophies that I have encountered in my search, have ever been able to prove to me that there is a God.
-fortunately for me, no one else has ever been able to disprove God to me either.
-If you believe in God, in any God, that's great, I mean it should make this pretty easy for you. By definition I think most people who believein God believe there is only one God; though you may have a different name for it. I call him Krishna and that's just because I can relate to the Truth I read in the books that call him that. If it doesn't sound True to me, it sounds like something a human made up to explain something they don't fully understand; which, is normal since we don't have that capacity anyway.
-I recommend that you Trust in God and seek to hear his instructions. Ask for direction and inspiration to be influenced by God and then Trust your judgment. Experience has shown me that it is very wise to have a trusted human advisor to clear these ideas. Thios should be a person with whom you can actually be totally honest with; and, the work that is the 12 steps of Alcoholic Anonymous will help you to accomplish this.
+fortunately for me, no one has ever been able to disprove God to me either, yet.
+If you believe in God, in any God, that's great, I mean it should make this pretty easy for you. By definition I think most people who believe in God believe there is only one God; though you may have a different name for it. I call him Krishna and that's just because I can relate to the Truth I read in the books that call him that. If it doesn't sound True to me, it sounds like something a human made up to explain something they don't fully understand; which, is acceptable since we don't have that capacity anyway.
+I recommend that you Trust in God and seek to hear his instructions. I have no idea how to tell you to do this. I ask for direction and for my inspiration to be influenced by God and then I more or less Trust my judgment. Experience has shown me that it is very wise to have a trusted human advisor to clear these ideas even if not acting on them. I found the most success when this was a person with whom I could actually be totally honest with; and, the work that is the 12 steps of Alcoholic Anonymous will help you to create that relationship accomplish a surprising level of honesty.
 If you're going to hang out here you should read this book. It looks like a long book; and, I feel very comfortable telling you that the first 167 pages are sufficient to recover from Alcoholism if you read it and do what is suggested with someone who knows it well. The rest is extra credit, War Stories and specific instructions for certain situations.
 In the forward to the first edition it states:
 To show alcoholics precisely how we have recovered is the main purpose of this book.
-there are other purposes like waking up your sponsees and keeping the door open while you bring in your groceries but they're not really stressed in the book
+there are other purposes like waking up your sponsees and keeping the door open while you bring in your groceries; but, they're not really stressed in the book. I used to hide my scale in there; the cops never opened any of my books and they searched my house a bunch of times. Truth wasn't on their checklist I suppose. Funny, it might have set me free.
 "We hope no further authentication is necessary but unfortunately there usually is some further authentication and it goes over that too.
 the book goes on to describe who is an alcoholic.
 If you go out every night with the intention of getting loaded and you do so, that does not make you an alcoholic.
